--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8">
 		<title>Amelie Boulangerie</title>
 		<link href="styles.css" rel="stylesheet">
+		<meta name="author" content="Elias Quintero">
+		<meta name="description" content="Amelie Boulangerie offerings and introduction">
 	</head>
 	<body>
 		<header>
@@ -20,6 +22,7 @@
 			</nav>
 			<main>
 				<h2>Experience the Difference</h2>
+				<img src="images/cafe-counter.jpg" alt="cafe counter with barista">
 				<p>Amelie Boulangerie is the master of flavor combinations. The jewel-colored macarons come in the most tempting of flavors. Experience the difference at Amelie Boulangerie.</p>
 			
 				<ul>
