--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Amelie Boulangerie</title>
 		<link href="styles.css" rel="stylesheet">
 		<meta name="author" content="Elias Quintero">
-		<meta name="description" content="Amelie Boulangerie offerings and introduction">
+		<meta name="description" content="Welcome to Amelie Boulangerie, we offer coffee, teas, baked goods and an experience you can't buy.">
 	</head>
 	<body>
 		<header>
