--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8">
 		<title>Amelie Boulangerie</title>
 		<link href="styles.css" rel="stylesheet">
+		<link rel="icon" href="favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		<meta name="author" content="Elias Quintero">
 		<meta name="description" content="Welcome to Amelie Boulangerie, we offer coffee, teas, baked goods and an experience you can't buy.">
 	</head>
